fixed replay btn

--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body {
   background-color: #d6f0fd;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Space Grotesk", sans-serif;
+  background-color: #d6f0fd;
+}
+
 .game-container {
   display: flex;
   justify-content: center;
@@ -16,10 +24,9 @@ body {
 
 .game-content {
   background-color: #edf9ff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   max-width: 800px;
   width: 90%;
 }
@@ -28,30 +35,45 @@ body {
   color: #000435;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   font-size: 3.7em;
 }
 
 .instructions {
-  margin-bottom: 20px;
+  text-align: left;
+  margin-bottom: 30px;
   color: #333;
-  font-size: 1.18em;
+  font-size: 1.1em;
+  line-height: 1.6;
+}
+
+.instructions p {
+  margin-bottom: 20px;
+}
+
+.instructions b {
+  color: #000435;
+  font-weight: bold;
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .start-button {
-  background-color: #000;
+  background-color: #000435;
   color: #fff;
   border: none;
-  padding: 10px 20px;
-  font-size: 1.5em;
-  border-radius: 5px;
+  padding: 10px 25px;
+  font-size: 1.4em;
+  border-radius: 8px;
   cursor: pointer;
   font-family: "Space Grotesk", sans-serif;
   transition: background-color 0.3s;
+  display: block;
+  margin: 30px auto 0;
 }
 
 .start-button:hover {
-  background-color: #333;
+  background-color: #202447ed;
 }
 
 @media only screen and (max-width: 768px) {
