--- a/game.css
+++ b/game.css
@@ -42,35 +42,50 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .instruction {
-    font-size: 1.1em;
+    font-size: 1em;
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
 
 .info-item {
     margin-bottom: 15px;
     text-align: center;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .label {
     display: block;
     font-weight: bold;
     color: #333;
+    flex: 1;
 }
 
 .value {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: bold;
     color: #000435;
+    min-width: 60px;
+    text-align: center;
 }
 
 .blink {
     animation: blink 1s steps(5, start) infinite;
+}
+
+.tip{
+    font-size: 0.85em;
+    margin-top: 0;
+    text-align: center;
 }
 
 @keyframes blink {
