--- a/game.css
+++ b/game.css
@@ -137,7 +137,7 @@ html, body {
     font-family: "Space Grotesk", sans-serif;
     transition: background-color 0.3s;
     margin-top: 20px;
-    display: none; /* Hide both buttons by default */
+    display: none; 
 }
 
 .modal-btn:hover {
